--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,10 +10,10 @@
             <a class="nav-link" (click)="signup()">Signup</a>
           </li>
           <li class="nav-item" *ngIf="isLoggedIn() && getRole() === 'ADMIN'">
-            <a class="nav-link" routerLink="/admin-home">Admin Home</a>
+            <a class="nav-link" routerLink="/admin-home"> Home</a>
           </li>
           <li class="nav-item" *ngIf="isLoggedIn() && getRole() === 'USER'">
-            <button class="nav-link" (click)="userhome()">User Home</button>
+            <button class="nav-link" (click)="userhome()"> Home</button>
           </li>
           <li class="nav-item" *ngIf="isLoggedIn() && getRole() === 'USER'">
             <button class="nav-link" (click)="profile()">Profile</button>
