--- a/src/app/components/user/order/order.component.html
+++ b/src/app/components/user/order/order.component.html
@@ -3,9 +3,8 @@
     <div *ngIf="orders.length === 0">No orders placed yet.</div>
     <div *ngFor="let order of orders" class="order-card">
     <h3>Order ID: {{ order.oid }}</h3>
-    <p>Address: {{ order.address }}</p>
+    <p>Summary: {{ order.summary }}</p>
     <p>Total Price: ₹{{ order.price }}</p>
     <p>Date: {{ order.calendarDate | date:'short' }}</p>
-    <!-- <button class="order-btn" (click)="placeOrder()">Place Order</button> -->
     </div>
      
